--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "web3modal": "^1.9.5"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.0",
     "autoprefixer": "^10.4.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
